Fix Syntax Errors 1